# TUMSAKPIGeneratorProgram

./: .env.example  .gitignore  README.md  plan.md  pyproject.toml  requirements.txt
_legacy/: KPI_Generatorv12.2.py  README.md
docs/: arquitectura.md  cambios.md  cedula-fallbacks-y-respaldo.md  diccionario-viajes.md  flujo-logico.md  migracion-cedulas-db.md  migracion-looker-v0.5.0.md  plan-historico-cedula-sheets.md  plan-relleno-drive-modo-excel.md  uso-looker.md  v0.5.0-design.md
installer/: .gitignore  KPIGenerator-Setup.iss  LEEME-Yaneth.txt  README-installer.md  build-installer.bat  setup-bundle.ps1  verify-bundle.bat
installer/assets/: .gitkeep
installer/bundle/: .gitkeep
installer/pascal/: credentials_wizard.pas  env_writer.pas  install_mode_wizard.pas  repo_downloader.pas
scripts/: compare_kpi_reports.py  run_cli.bat  run_gui.bat
secrets/: README.md
src/kpi_generator/: __init__.py  __main__.py  audit.py  cli.py  config.py  lineage.py
src/kpi_generator/domain/: __init__.py  change_tracker.py  comodato.py  equipment.py  opcedula.py  period.py  processor.py
src/kpi_generator/gui/: __init__.py  app.py  theme.py  widgets.py
src/kpi_generator/io/: __init__.py  cedulas_db.py  date_range.py  excel.py  postgres.py  sap.py  sheets.py
src/kpi_generator/reports/: __init__.py
tests/: README.md
tests/integration/: conftest.py  test_audit.py  test_db_vs_excel.py  test_pipeline_identidad.py
tests/unit/: test_assign_cedula_info.py  test_cedula_fallbacks.py  test_cedula_filename.py  test_cedula_lineage.py  test_cedula_sheets_date_range.py  test_cedulas_db_snapshot.py  test_change_tracker.py  test_comodato.py  test_contar_remolques.py  test_equipment.py  test_load_cedulas_for_period.py  test_load_daily_cedulas.py  test_objectives_match.py  test_opcedula.py  test_period.py  test_sync_workbook_retry.py
